tests/snapshots/dot_repeat_test__dot_repeat_delete_line.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 2

Buffer:
[l]ine 3
line 4
