tests/snapshots/dot_repeat_test__dot_repeat_di_paren.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
func[(]arg1) and func(arg2)
