tests/snapshots/dot_repeat_test__dot_repeat_diw.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
two [e] four
