tests/snapshots/dot_repeat_test__dot_repeat_substitute.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:7
Lines: 1

Buffer:
Hello H[w]orld
