tests/snapshots/dot_repeat_test__dot_with_f_motion.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
a b [c] d e f
