tests/snapshots/dot_repeat_test__dot_with_multichar_insert.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:15
Lines: 2

Buffer:
LONG TEXT line 1
line LONG TEXT [2]
