tests/snapshots/dot_repeat_test__dot_with_search_motion.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 1

Buffer:
hello [w]orld hello test
